--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "",
   "main": "dist/main/server.js",
   "dependencies": {
-    "module-alias": "^2.2.3",
-    "typescript": "^5.1.6"
+    "module-alias": "^2.2.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "concurrently": "^8.2.0",
+    "eslint": "^8.45.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.6.1",
+    "lint-staged": "^13.2.3",
     "nodemon": "^3.0.1",
-    "rimraf": "^5.0.1"
+    "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6"
   },
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig-build.json",
@@ -20,7 +28,10 @@
     "start": "node dist/main/server.js",
     "dev": "nodemon -L --watch ./dist ./dist/main/server.js",
     "start:dev": "concurrently --kill-others-on-fail \"npm run build:watch\" \"npm run dev\"",
-    "test": "jest"
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test:stage": "npm run test -- --findRelatedTests",
+    "test:ci": "npm run test -- --coverage",
+    "lint": "eslint --ignore-path .gitignore --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
