--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.7",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "concurrently": "^8.2.0",
