--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/main/server.js",
   "dependencies": {
-    "module-alias": "^2.2.3"
+    "module-alias": "^2.2.3",
+    "mongodb": "^5.7.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.7",
@@ -20,6 +21,7 @@
     "lint-staged": "^13.2.3",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
