--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "dist/main/server.js",
   "dependencies": {
+    "express": "^4.18.2",
     "module-alias": "^2.2.3",
     "mongodb": "^5.7.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.7",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "concurrently": "^8.2.0",
