--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,10 +31,11 @@
     "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
       "@domain/*": ["domain/*"],
-      "@appliation/*": ["appliation/*"],
+      "@application/*": ["application/*"],
       "@infrastructure/*": ["infrastructure/*"],
       "@main/*": ["main/*"],
       "@test/*": ["../test/*"],
+      "@modules/*": ["modules/*"]
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     "rootDirs": [
       "src",
