--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "concurrently": "^8.2.0",
     "eslint": "^8.45.0",
