--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rimraf": "^5.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   },
   "scripts": {
